Adicionado detalhes do Step 1: Setting up the CUR

--- a/4. Criando relatórios de uso e de custo.md
+++ b/4. Criando relatórios de uso e de custo.md
@@ -1,49 +1,29 @@
-https://github.com/kubecost/docs/blob/master/aws-cloud-integrations.md
-
-O Kubecost extrai os preços dos ativos da API pública de preços da AWS por padrão. Para ter informações de preços precisas da AWS, você pode integrar diretamente à sua conta. Essa integração considerará adequadamente os Programas de descontos corporativos, o uso de instâncias reservadas, os Savings Plans, o uso spot e muito mais.Este roteiro descreve as etapas necessárias para alcançar isso.
-
-Seu usuário precisará das permissões necessárias para criar o relatório de custo e uso (Cost and Usage Report), adicionar credenciais do IAM para Athena e S3. A permissão opcional é a capacidade de adicionar e executar modelos do CloudFormation
-# Cost and Usage Report Integration
-
-## Step 1: Setting up the CUR
-(Passo 1: Configurando o CUR (Cost and Usage Report))
-
-Siga estas etapas para configurar um relatório de custo e uso. Certifique-se de habilitar a integração de IDs de recursos e Athena ao criar o CUR. 
-
-📌 Anote o nome do bucket que você cria para dados CUR. Isso será usado na etapa seguinte.
-
-📌 Se você acredita que tem as permissões corretas, mas não consegue acessar a página Billing and Cost Management, peça ao proprietário da conta raiz da sua organização para seguir estas instruções https://docs.aws.amazon.com/awsaccountbilling/latest/aboutv2/control-access-billing.html
-
-A AWS pode levar várias horas para publicar os dados, espere até que isso seja concluído antes de prosseguir para a próxima etapa
-
-### [Creating Cost and Usage Reports](
-https://docs.aws.amazon.com/cur/latest/userguide/cur-create.html)
+# Criando relatórios de uso e de custo
+_[Creating Cost and Usage Reports](
+https://docs.aws.amazon.com/cur/latest/userguide/cur-create.html)_
 
 Você pode usar a página Cost & Usage Reports do console Billing and Cost Management para criar Relatórios Cost and Usage.
 
 📌 Pode levar até 24 horas para que a AWS comece a entregar relatórios ao seu bucket do Amazon S3. Após o início da entrega, a AWS atualiza os arquivos de relatórios de uso e custo da AWS pelo menos uma vez por dia.
 
-#### Criar relatórios Cost and Usage
-[Creating Cost and Usage Reports
-](https://docs.aws.amazon.com/cur/latest/userguide/cur-create.html)
+## Criar relatórios Cost and Usage
+_To create Cost and Usage Reports_
 
-1. Faça login no console do Billing and Cost Management em https://console.aws.amazon.com/billing/home#/
 
-2. No painel de navegação, selecione Cost and Usage Report.
+1. Faça login no console do **Billing and Cost Management** em https://console.aws.amazon.com/billing/home#/
+
+2. No painel de navegação, selecione **Cost and Usage Report**.
 
 3. Escolha Create report (Criar relatório).
 
 4. Em Report name (Nome do relatório), insira um nome para o relatório
 
->>    Nome do relatório =  aws-cost-report
-    
 📌 O nome do relatório deve ser único e conter apenas caracteres alfanuméricos! - _ . * '( )
 
-5. Em _Additional report details_ (Detalhes adicionais do relatório), selecione Include resource IDs (Incluir IDs de recurso) para incluir os IDs de cada recurso individual no relatório.
+5. Em _Additional report details_ (Detalhes adicionais do relatório), selecione _Include resource IDs_ (Incluir IDs de recurso) para incluir os IDs de cada recurso individual no relatório.
 
-A inclusão de IDs de recursos criará itens de linha individuais para cada um de seus recursos. Isso pode aumentar significativamente o tamanho dos seus arquivos de Relatórios de custos e uso, com base noAWSuso do.
+📌 A inclusão de IDs de recursos criará itens de linha individuais para cada um de seus recursos. Isso pode aumentar significativamente o tamanho dos seus arquivos de Relatórios de custos e uso, com base noAWSuso do.
 
->> seleciona a caixa
 
 📌 Pode levar até 24 horas porAWSPara começar a entregar relatórios no bucket do Amazon S3. Após o início da entrega,AWSatualiza oAWSRelatórios de custos e uso pelo menos uma vez por dia.
 
@@ -56,24 +36,24 @@ A inclusão de IDs de recursos criará itens de linha individuais para cada um d
 
 📌  Selecionar essa opção atualiza automaticamente seu Relatório de uso e custos quando forem detectadas cobranças de meses anteriores com faturas fechadas
 
->> selecionar a caixa
-
 7. Avançar.
 
 8. Para bucket do S3, escolha Configure.
     
     📌 Para receber os relatórios de uso e custo da AWS, você deve ter um bucket do Amazon S3 criado e configurado com as permissões de acesso apropriadas. Você pode adicionar um bucket existente ou criar um novo.
 
- 9. Create a bucket / selecione o bucket
-       * S3 bucket name = kubecost-aws-cost-and-usage-report
-       * Region = US East (N. Virginia)
+ 9. Na caixa de diálogo _S3 bucket - required_ clique em _Configure_ , siga um destes procedimentos:
+
+  * _Select existing bucket_ : Selecione um bucket existente na lista suspensa e escolha Next.
+
+  * Create a bucket: selecione o bucket e a região e escolha Next.
 
        📌 Se você criar um bucket para relatórios de custo e uso da AWS, as configurações e permissões padrão serão aplicadas. Após a criação do bucket, você pode atualizar as configurações e permissões no console do Amazon S3.
 
        📌 Algumas regiões são desabilitadas por padrão. Para criar um bucket em uma dessas regiões, você deve habilitar a região primeiro. Saber mais
 
 
-10. Revise a política do bucket e selecione I have confirmed that this policy (Confirmei que esta política está correta) e escolha Salvar.
+10. Revise a política do bucket e selecione _I have confirmed that this policy_ (Confirmei que esta política está correta) e escolha Salvar.
 
     Politica padrão aplicada
 
@@ -123,13 +103,10 @@ A inclusão de IDs de recursos criará itens de linha individuais para cada um d
 
 11. Para _Report path prefix_ (Prefixo do caminho do relatório), insira o prefixo do caminho do relatório que deseja anexar ao nome do seu relatório.
 
-https://docs.aws.amazon.com/enterprisebilling/6b7c01c5-b592-467e-9769-90052eaf359c/userguide/configuring-eb.html
+📗 https://docs.aws.amazon.com/enterprisebilling/6b7c01c5-b592-467e-9769-90052eaf359c/userguide/configuring-eb.html
 
-Valor informado : 
 
->>  Report path prefix - required = costusage
-
-12. >> Time granularity : Daily
+12. Para granularidade de tempo, escolha uma das seguintes opções Time granularity : Daily
 
     📌 A granularidade de tempo na qual os dados do relatório são medidos e exibidos.
 
@@ -159,22 +136,3 @@ A substituição de relatórios pode economizar nos custos de armazenamento do A
 
 
 Você sempre pode retornar à seção Relatórios de custo e uso do console do Billing and Cost Management para ver quando seus relatórios foram atualizados pela última vez.
-
-
-
-## Step 2: Setting up Athena
-(Passo 2: Configurando o Athena)
-
-https://docs.aws.amazon.com/cur/latest/userguide/cur-ate-setup.html#create-athena-cur
-
-
-📕 O que são os relatórios de uso e custo da AWS?
-[What are AWS Cost and Usage Reports?](https://docs.aws.amazon.com/cur/latest/userguide/what-is-cur.html) 
-
-
-📌 Clique no próximo link Próximo tópico para obter instruções passo a passo sobre como configurar o Athena por meio do cloud formation
-
-1. Navegue até https://console.aws.amazon.com/s3
-2. 
-
-
