trad doc kubecost

--- a/3. AWS Cloud Integration.md
+++ b/3. AWS Cloud Integration.md
@@ -23,11 +23,108 @@ Siga estas etapas para configurar um relatório de custo e uso. Certifique-se de
 A AWS pode levar várias horas para publicar os dados, espere até que isso seja concluído antes de prosseguir para a próxima etapa
 
 
-
-
-
 ## Step 2: Setting up Athena
 (Passo 2: Configurando o Athena)
+
+Como parte do processo de criação do CUR, a Amazon também cria um template do CloudFormation que é usado para criar a integração do Athena. Ele é criado no S3 bucket CUR em `your-billing-prefix/cur-name` e normalmente tem o nome de arquivo `crawler-cfn.yml`. Você precisará implantar este template do CloudFormation para concluir a integração do CUR Athena.
+
+📙 [Setting up Athena using AWS CloudFormation templates](
+https://docs.aws.amazon.com/cur/latest/userguide/use-athena-cf.html)
+
+Depois que o Athena estiver configurado com o CUR, você precisará criar um novo bucket do S3 para os resultados da consulta do Athena.
+
+1. Navegue até https://console.aws.amazon.com/s3
+2. Selecione **Create Bucket**
+3. Certifique-se de usar a mesma região que foi usada para o bucket CUR e escolha um nome que siga o formato `aws-athena-query-results-*
+4.  Selecione **Create Bucket**
+5. Navegue até https://console.aws.amazon.com/athena
+6. Clique em **Settings**
+7. Defina **Query result location ** (o local do resultado da consulta) para o bucket do S3 que você acabou de criar
+
+
+## Passo 3: configurar permissões do IAM
+(_Step 3: Setting up IAM permissions_
+
+### Adicionar via CloudFormation:
+
+O Kubecost oferece um conjunto de templates do CloudFormation para ajudar a configurar as _roles_ do IAM. Se você é novo no provisionamento de roles do IAM, sugerimos baixar nossos templates e usar o assistente do CloudFormation para configurá-los:
+📙 [Creating a stack on the AWS CloudFormation console](https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/cfn-console-create-stack.html). Faça download dos arquivos de modelo dos URLs fornecidos abaixo e carregue-os como o template na stack.
+
+**My kubernetes clusters run in different accounts from the master payer account**
+(Meus clusters do kubernetes são executados em contas diferentes da conta do pagador mestre) **Creating a stack** > Selecione um stack template step.
+
+Há dus possibilidades de arquitetura, quando o kubernetes é executado na mesma conta em que é efetuado o pagamento , ou quando o cluster de kubernetes fica em uma conta diferente, da conta pagadora.
+
+
+#### Meus clusters do kubernetes são executados em contas diferentes da conta do pagador mestre
+(_My kubernetes clusters run in different accounts from the master payer account_)
+
+Em cada subconta executando o Kubecost, execute o procedimento:
+
+  * Baixe este arquivo: https://raw.githubusercontent.com/kubecost/cloudformation/master/kubecost-sub-account-permissions.yaml
+  
+  * Navegue até https://console.aws.amazon.com/cloudformation
+
+  * Escolha **Create New Stack** se você nunca usou o AWS CloudFormation antes. Caso contrário, escolha **Create Stack**;
+  
+  * Escolha a opção **With new resources (standard)**;
+
+  * Em **Prepare template**, escolha **Template is ready**
+
+  * Em **Template source**, escolha **Upload a template file**
+  
+  * Selecione **Choose file**.
+  
+  * Escolha o template `.yaml` baixado e escolha **Open**;
+
+  * **Next**;
+
+  * Defina os seguintes parâmetros: 
+    * MasterPayerAccountID : O ID da conta do pagador mestre onde o CUR foi criado;
+    * SpotDataFeedBucketName : O bucket onde o _spot data feed_ (feed de dados spot) é enviado na etapa "_Setting up the Spot Data feed_ (Configurando o feed de dados spot)"
+
+  * **Next**.
+  
+  * **Next**.
+  
+  * Na parte inferior da página, selecione **I acknowledge that AWS CloudFormation might create IAM resources with custom names**.
+
+  * Escolha **Create Stack**
+
+
+
+
+
+  ***
+
+* Na conta principal do pagador
+  * Siga as mesmas etapas para criar uma pilha do CloudFormation como acima, mas com o seguinte como seu arquivo yaml: https://raw.githubusercontent.com/kubecost/cloudformation/master/kubecost-masterpayer-account-permissions.yaml , e com estes parâmetros:
+    * AthenaCURBucket: O bucket onde o CUR é definido na etapa “Configurando o CUR”
+    * KubecostClusterID: uma conta na qual o Kubecost está sendo executado e que requer acesso ao Athena CUR
+
+
+
+# Passo EXTRA : Spot Data feed integration
+
+O Kubecost reconciliará seus preços spot com os relatórios de cobrança CUR assim que estiverem disponíveis (geralmente de 1 a 2 dias), mas os dados de preços podem ser obtidos a cada hora integrando-se diretamente ao feed spot da AWS.
+
+📙 [Spot Instance data feed](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/spot-data-feeds.html)
+
+
+📌 Anote o nome do bucket que você criou para dados pontuais. Isso será usado na etapa seguinte.
+
+## Configurando o feed de dados spot no Kubecost
+
+Esses valores podem ser definidos no frontend do kubecost ou por meio de .Values.kubecostProductConfigs helm chart.
+
+Observe que, se você definir qualquer kubecostProductConfigs no helm chart, todas as alterações por meio do frontend serão excluídas na reinicialização do pod
+
+
+
+---
+
+
+
 
 https://docs.aws.amazon.com/cur/latest/userguide/cur-ate-setup.html#create-athena-cur
 
@@ -36,47 +133,9 @@ https://docs.aws.amazon.com/cur/latest/userguide/cur-ate-setup.html#create-athen
 [What are AWS Cost and Usage Reports?](https://docs.aws.amazon.com/cur/latest/userguide/what-is-cur.html) 
 
 
-📌 Clique no próximo link Próximo tópico para obter instruções passo a passo sobre como configurar o Athena por meio do cloud formation
 
-1. Navegue até https://console.aws.amazon.com/s3
-2. 
 
-Depois que o Athena estiver configurado com o CUR, você precisará criar um novo bucket do S3 para os resultados da consulta do Athena.
 
-## Step 3: Setting up IAM permissions
-(Etapa 3: configurar permissões do IAM)
-
-Adicionar via CloudFormation:
-
-O Kubecost oferece um conjunto de templates do CloudFormation para ajudar a configurar suas roles do IAM. Se você é novo no provisionamento de roles do IAM, sugerimos baixar nossos templates e usar o assistente do CloudFormation para configurá-los:
-
-### Add via CloudFormation
-
-**My kubernetes clusters run in different accounts from the master payer account**
-(Meus clusters do kubernetes são executados em contas diferentes da conta do pagador mestre)
-
-* Em cada subconta executando o Kubecost
-  * Baixe este arquivo: https://raw.githubusercontent.com/kubecost/cloudformation/master/kubecost-sub-account-permissions.yaml
-  * Navegue até https://console.aws.amazon.com/cloudformation
-  * Escolha **Create New Stack** se você nunca usou o AWS CloudFormation antes. Caso contrário, escolha **Create Stack**;
-  * Escolha a opção **With new resources (standard)**;
-  * Em **Prepare template**, escolha **Template is ready**
-  * Em **Template source**, escolha **Upload a template file**
-  * Selecione **Choose file**.
-  * Escolha o template .yaml baixado e escolha **Open**.
-  * Escolha **Next**.
-  * Defina os seguintes parâmetros
-    *   MasterPayerAccountID    : O ID da conta do pagador mestre onde o CUR foi criado 
-    *   SpotDataFeedBucketName  : O ID da conta da AWS que contém o cluster com kubecost.
-  * Escolha **Next**.
-  * Escolha **Next**.
-  * Na parte inferior da página, selecione **I acknowledge that AWS CloudFormation might create IAM resources with custom names**.
-  * Escolha Create Stack
-
-* Na conta principal do pagador
-  * Siga as mesmas etapas para criar uma pilha do CloudFormation como acima, mas com o seguinte como seu arquivo yaml: https://raw.githubusercontent.com/kubecost/cloudformation/master/kubecost-masterpayer-account-permissions.yaml , e com estes parâmetros:
-    * AthenaCURBucket: O bucket onde o CUR é definido na etapa “Configurando o CUR”
-    * KubecostClusterID: uma conta na qual o Kubecost está sendo executado e que requer acesso ao Athena CUR
 
 
 
