--- a/3. AWS Cloud Integration.md
+++ b/3. AWS Cloud Integration.md
@@ -10,13 +10,12 @@ Seu usuário precisará das permissões necessárias para criar o relatório de 
 
 ## Cost and Usage Report Integration
 
-### Passo 1: Configurando o CUR (Cost and Usage Report
+### Passo 1: Configurando o CUR (Cost and Usage Report)
 _Step 1: Setting up the CUR_
 
 Siga estas etapas para configurar um relatório de custo e uso. Certifique-se de habilitar a integração de IDs de recursos e Athena ao criar o CUR. 
 
-📙 [Criando relatórios de uso e de custo
-](https://docs.aws.amazon.com/cur/latest/userguide/cur-create.html)
+📙 [Criando relatórios de uso e de custo](https://docs.aws.amazon.com/cur/latest/userguide/cur-create.html)
 
 📌 Anote o nome do bucket que você cria para dados CUR. Isso será usado na etapa seguinte.
 
@@ -26,7 +25,7 @@ A AWS pode levar várias horas para publicar os dados, espere até que isso seja
 ## Step 2: Setting up Athena
 (Passo 2: Configurando o Athena)
 
-Como parte do processo de criação do CUR, a Amazon também cria um template do CloudFormation que é usado para criar a integração do Athena. Ele é criado no S3 bucket CUR em `your-billing-prefix/cur-name` e normalmente tem o nome de arquivo `crawler-cfn.yml`. Você precisará implantar este template do CloudFormation para concluir a integração do CUR Athena.
+Como parte do processo de criação do CUR, a Amazon também cria um template do CloudFormation que é usado para criar a integração do Athena. Ele é criado no bucket em que o CUR é salvo, em: `your-billing-prefix/cur-name` e normalmente tem o nome de arquivo `crawler-cfn.yml`. Você precisará implantar este template do CloudFormation para concluir a integração do CUR Athena.
 
 📙 [Setting up Athena using AWS CloudFormation templates](
 https://docs.aws.amazon.com/cur/latest/userguide/use-athena-cf.html)
@@ -51,7 +50,9 @@ O Kubecost oferece um conjunto de templates do CloudFormation para ajudar a conf
 📙 [Creating a stack on the AWS CloudFormation console](https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/cfn-console-create-stack.html). Faça download dos arquivos de modelo dos URLs fornecidos abaixo e carregue-os como o template na stack.
 
 **My kubernetes clusters run in different accounts from the master payer account**
-(Meus clusters do kubernetes são executados em contas diferentes da conta do pagador mestre) **Creating a stack** > Selecione um stack template step.
+(Meus clusters do kubernetes são executados em contas diferentes da conta do pagador mestre)
+
+**Creating a stack** > Selecione um stack template step.
 
 Há dus possibilidades de arquitetura, quando o kubernetes é executado na mesma conta em que é efetuado o pagamento , ou quando o cluster de kubernetes fica em uma conta diferente, da conta pagadora.
 
